Revision history for Datahub-Factory

{{$NEXT}}

1.4  2017-07-08 13:40:43 CEST
    - added: JSON importer per issue ##43
    - changed: moved fetching id from item before item is fixed.
    - added: JSON exporter.
    - Fixed #33: Datahub::Factory::Fixer::Condition breaks with too many file opens
    - changed: display counter number in debug information
    - changed: confrom to new Catmandu::Store::Datahub API
    - added: missing dependency Catmandu::Importer::XML
    - fixed: string check condition

1.3  2017-05-12 12:45:35 UTC
	- Improved error handling: try/catch and Catmandu::Error->throw

1.2  2017-05-11 11:48:02 UTC
        - Updated documentation
        - Refactor of Exporter.pm

1.1  2017-05-11 09:27:31 UTC
        - Refactor of conditional Fix modules
        - Updated documentation

1.0  2017-05-09 13:50:42 UTC
        - Updated version number

0.11  2017-05-09 13:42:32 UTC
	- Updated documentation

0.10  2017-04-06 07:12:16 UTC
        - Added AdlibOAI

0.9  2017-03-27 11:15:53 UTC
        - Added a configurable logger
        - Updated error handling
        - Updated documentation

0.8  2017-03-22 14:54:08 UTC
	- Refactoring to remove unused scripts and branches
	- Refactoring to loosely couple importer/fixer/exporter
	- Updated documentation

0.7  2017-03-20 12:54:37 UTC
        - Moved all institution-specific importers (MSK, KMSKA, VKC) to separate modules

0.6  2017-03-20 11:03:57 UTC
	- Removed unused Switch import

0.5  2017-02-22 11:09:26 UTC
        - Added Importer::Datahub
        - Added merge command

0.03  2017-02-17 09:09:06 UTC
	- Configuratble id_path for transport.pm
        - Added Importer::OAI

0.02  2017-02-15 10:13:05 UTC
        - Refactor to use scripts/dhconveyor
        - Refactor to use App::Cmd
        - Updated logging
        - Refactor to use configuration file
        - Refactor to use pipeline configuration file

0.01  2017-01-03 10:42:51 UTC
	- Bugfix
        - Initial release