@@ -100,76 +100,4 @@ sub from_cli_args {
 	return $self->conf_object;
 }
 
-sub check_object {
-    my $self = shift;
-
-
-    if ( ! $self->conf_object->{pipeline} ) {
-		# Only require the CLI switches if no pipeline file was specified
-		if ( ! $self->conf_object->{importer} ) {
-			die "Importer is missing";
-		}
-
-		if ( ! $self->conf_object->{exporter} ) {
-			die "Exporter is missing";
-		}
-
-		if ( ! $self->conf_object->{fixes} ) {
-			die "Fixes are missing";
-		}
-
-		if ( $self->conf_object->{importer} eq "Adlib" ) {
-			if ( ! $self->conf_object->{oimport}->{file_name} ) {
-				die "Adlib: Import file is missing";
-			}
-		}
-
-		if ( $self->conf_object->{importer} eq "TMS" ) {
-			if ( ! $self->conf_object->{oimport}->{db_name} ) {
-				die "TMS: database name is missing";
-			}
-
-			if ( ! $self->conf_object->{oimport}->{db_user} ) {
-				die "TMS: database user is missing";
-			}
-
-			if ( ! $self->conf_object->{oimport}->{db_password} ) {
-				die "TMS: database user password is missing";
-			}
-
-			if ( ! $self->conf_object->{oimport}->{db_host} ) {
-				die "TMS: database host is missing";
-			}
-		}
-
-		if ( $self->conf_object->{exporter} eq "Datahub" ) {
-			# This should move to a separate module
-			if ( ! $self->conf_object->{oexport}->{datahub_url} ) {
-				die "Datahub: the URL to the datahub instance is missing";
-			}
-
-			if ( ! $self->conf_object->{oexport}->{oauth_client_id} ) {
-				die "Datahub OAUTH: the client id is missing";
-			}
-
-			if ( ! $self->conf_object->{oexport}->{oauth_client_secret} ) {
-				die "Datahub OAUTH: the client secret is missing";
-			}
-
-			if ( ! $self->conf_object->{oexport}->{oauth_username} ) {
-				die "Datahub OAUTH: the client username is missing";
-			}
-
-			if ( ! $self->conf_object->{oexport}->{oauth_password} ) {
-				die "Datahub OAUTH: the client passowrd is missing";
-			}
-		}
-	} else {
-		if ( ! -f $self->conf_object->{pipeline} ) {
-			die sprintf('The configuration file %s does not exist', $self->conf_object->{pipeline});
-		}
-	}
-    return undef;
-}
-
 1;
